--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <div class="title">
 
-            <img src="/assets/coq.PNG" alt="" srcset="">
+            <img src="./assets/coq.PNG" alt="" srcset="">
 
             <h1><span>SCI</span> Résidence Cour de la Ferme</h1>
 
